--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<link rel="stylesheet/less" type="text/css" href="stylesheets/elements.less">
-	<link rel="stylesheet/less" href="stylesheets/base.less">
-	<link rel="stylesheet/less" href="stylesheets/skeleton.less">
-	<link rel="stylesheet/less" href="stylesheets/layout.less">
+	<link rel="stylesheet/less" type="text/css" href="stylesheets/base.less">
+	<link rel="stylesheet/less" type="text/css" href="stylesheets/skeleton.less">
+	<link rel="stylesheet/less" type="text/css" href="stylesheets/layout.less">
 	<link rel="stylesheet/less" type="text/css" href="stylesheets/style.less">	
 	<script src="js/less.js" type="text/javascript"></script>
 	<!--[if lt IE 9]>
