wrote script for viewing features

--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
 	</div>
 	<div class="features-bg">
 		<div class="features container">
-			<h1>Without charging any more than your current credit card processor, Swipely brings your restaurant:</h1>
+			<h1 class="offset-by-one">Without charging any more than your current credit card processor, Swipely brings your restaurant:</h1>
 			<div class="twelve columns offset-by-two">
 					<ul class="feature-labels">
-						<li>Analytics</li>
-						<li>Loyalty</li>
-						<li>Marketing</li>
+						<li id="feature1-button">Analytics</li>
+						<li id="feature2-button">Loyalty</li>
+						<li id="feature3-button">Marketing</li>
 					</ul>
 				<div class="feature-screenshots">
-
+					<!-- bg image changes on click -->
 				</div>
 				<div class="feature-content" id="feature1"><p>Some content</p></div>
 				<div class="feature-content" id="feature2" style="display:none;"><p>Some content</p></div>
