added testimonials, finished features

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<div class="sixteen columns">
 				<div class="pitch">
 					<h1>Bring <span class="orange-me">your customers</span> back.  Again and again.</h1>
-					<h2><span class="bold-me">Swipely</span> unlocks your transactional data to get you closer to your patrons.<!-- <span class="bold-me">valuable analytics</span> and <span class="bold-me">marketing tools</span> for your restaurant, at <span class="bold-me">no additional cost</span>. --></h2>
+					<h3><span class="bold-me">Swipely</span> unlocks your transactional data to get you closer to your patrons.<!-- <span class="bold-me">valuable analytics</span> and <span class="bold-me">marketing tools</span> for your restaurant, at <span class="bold-me">no additional cost</span>. --></h3>
 					<ul>
 						<li class="value-prop" id="revenue"><img src="images/arrow.png"><br>Lift revenue with repeat visits from valuable, loyal customers.</li>
 						<li class="value-prop" id="customers"><img src="images/people.png"><br>Lift revenue with repeat visits from valuable, loyal customers.</li>
@@ -51,21 +51,44 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="features-bg">
 		<div class="features container">
-			<h1 class="offset-by-one">Without charging any more than your current credit card processor, Swipely brings your restaurant:</h1>
-			<div class="twelve columns offset-by-two">
-					<ul class="feature-labels">
-						<li id="feature1-button">Analytics</li>
-						<li id="feature2-button">Loyalty</li>
-						<li id="feature3-button">Marketing</li>
-					</ul>
-				<div class="feature-screenshots">
-					<!-- bg image changes on click -->
-				</div>
-				<div class="feature-content" id="feature1"><p>Some content</p></div>
-				<div class="feature-content" id="feature2" style="display:none;"><p>Some content</p></div>
-				<div class="feature-content" id="feature3" style="display:none;"><p>Some content</p></div>
+			
+			<h1 class="bold-me">Features</h1>
+
+			<ul class="feature-labels">
+				<li>Analytics</li>
+				<li>Loyalty</li>
+				<li>Marketing</li>
+			</ul>
+
+			<div class="feature-screenshots">
+			</div>
+
+			<div class="feature-content" id="feature1"><h3 class="blue-me">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </h3></div>
+			
+			<div class="feature-content" id="feature2" style="display:none;"><h3 class="blue-me">Some content</h3></div>
+			
+			<div class="feature-content" id="feature3" style="display:none;"><h3 class="blue-me">Some content</h3></div>
+
+		</div>
+	</div>
+
+	<div class="testimonials-bg">
+		<div style="display:none;" class="featured-in"></div>
+		<div class="testimonial-container">
+			<div class="testimonial">
+				<h1 id="quote">Swipely is a payment processor that's actually on my side.</h1>
+				<div id="source"><img src="images/user-icon.jpg"><p>-</p><p>Jon, owner of <br> <a href="http://steaksbyjon.com">Jon's Steakhouse</a></p></div>
+			</div>
+			<div class="swipely-works">
+				<h3 class=""></h3>
+				<ul>
+					<li><img src="images/fine-dining.jpeg"><br>Fine Dining</li>
+					<li><img src="images/fast-casual.jpeg"><br>Fast Casual</li>
+					<li><img src="images/casual-dining.jpeg"><br>Casual Dining</li>
+				</ul>
 			</div>
 		</div>
 	</div>
