--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 				<div class="pitch">
 					<h1>Bring <span class="orange-me">your customers</span> back.  Again and again.</h1>
 					<h3><span class="bold-me">Swipely</span> unlocks your transactional data to get you closer to your patrons.<!-- <span class="bold-me">valuable analytics</span> and <span class="bold-me">marketing tools</span> for your restaurant, at <span class="bold-me">no additional cost</span>. --></h3>
-					<ul>
-						<li class="value-prop" id="revenue"><img src="images/arrow.png"><br>Lift revenue with repeat visits from valuable, loyal customers.</li>
-						<li class="value-prop" id="customers"><img src="images/people.png"><br>Lift revenue with repeat visits from valuable, loyal customers.</li>
-						<li class="value-prop" id="low-cost"><img src="images/dollar.png"><br>Lift revenue with repeat visits from valuable, loyal customers.</li>
+					<ul class="value-prop">
+						<li><img src="images/arrow.png"><br>Lift revenue with repeat visits from valuable, loyal customers.</li>
+						<li><img src="images/people.png"><br>Lift revenue with repeat visits from valuable, loyal customers.</li>
+						<li><img src="images/dollar.png"><br>Lift revenue with repeat visits from valuable, loyal customers.</li>
 					</ul>
 					<a class="call-to-action" href="foo.com">Get Started With Swipely</a>
 				</div>
@@ -83,7 +83,6 @@
 				<div id="source"><img src="images/user-icon.jpg"><p>-</p><p>Jon, owner of <br> <a href="http://steaksbyjon.com">Jon's Steakhouse</a></p></div>
 			</div>
 			<div class="swipely-works">
-				<h3 class=""></h3>
 				<ul>
 					<li><img src="images/fine-dining.jpeg"><br>Fine Dining</li>
 					<li><img src="images/fast-casual.jpeg"><br>Fast Casual</li>
