--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 	</div>
 
 	<div class="testimonials-bg">
-		<div style="display:none;" class="featured-in"></div>
+		<div class="featured-in">
+		</div>
 		
 		<div class="testimonial-container" style="background-color:transparent;">
 			<h1 class="bold-me" style="color:white;">Testimonials</h1>
@@ -117,7 +118,7 @@
 			<div class="sixteen columns">
 				
 				
-				<div class="eight columns">
+				<div class="six columns">
 					<h4>Get in touch</h4>
 					<div class="three columns">
 
@@ -135,16 +136,16 @@
 				  		</div>
 
 					</div>
-					<div class="five columns">
+					<div class="three columns">
 				  		<a stye="width:160px"href="https://twitter.com/swipely" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @swipely</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 				  		<div class="fb-like" data-href="https://www.facebook.com/swipely" data-send="false" data-width="250" data-show-faces="true" data-font="arial"></div>
 
 				  	</div>
 				</div>
-				<div class="eight columns">
+				<div class="ten columns">
 					<div class='logos'>
 						<a>
-					  	<img alt='' src='images/badges.png'>
+					  	<img src='images/badges.png'>
 						</a>
 			  		</div>
 			  		<p class='terms'>Swipely is a registered ISO/MSP of Wells Fargo Bank, N.A., Walnut Creek, CA</p>
