added form and made cosmetic adjustments

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 	<!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
 
-	<header class="sixteen columns" id="swipely-header">
+	<header id="swipely-header">
 		<div id="swipely-nav">
 			<img src="images/logo.png" id="logo">
 		</div>
@@ -46,7 +46,7 @@
 						<li><img src="images/people.png"><br>Lift revenue with repeat visits from valuable, loyal customers.</li>
 						<li><img src="images/dollar.png"><br>Lift revenue with repeat visits from valuable, loyal customers.</li>
 					</ul>
-					<a class="call-to-action" href="foo.com">Get Started With Swipely</a>
+					<a class="call-to-action" href="lead-capture-form.html">Get Started With Swipely</a>
 				</div>
 			</div>
 		</div>
@@ -110,6 +110,7 @@
 				<h3 id="fast-casual-content" style="display:none;">second</h3>
 				<h3 id="casual-dining-content" style="display:none;">third</h3>
 			</div>
+			<a class="call-to-action" href="lead-capture-form.html">Get Started With Swipely</a>
 		</div>
 	</div>
 
