--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 		<div class="container">
 			<div class="sixteen columns">
 				<div class="pitch">
-					<h1>Bring <span class="orange-me">your customers</span> back.  Again and again.</h1>
-					<h3><span class="bold-me">Swipely</span> unlocks your transactional data to get you closer to your patrons.<!-- <span class="bold-me">valuable analytics</span> and <span class="bold-me">marketing tools</span> for your restaurant, at <span class="bold-me">no additional cost</span>. --></h3>
+					<h1>They're <span class="orange-me">your guests</span>.<br>Get to know them better.</h1>
+					<h3>Swipely is a next-generation <span class="bold-me orange-me">	credit card processor</span> that gives your restaurant analytics and marketing tools to <span class="bold-me orange-me">lift revenue</span> at <span class="bold-me orange-me">no additional cost.</span><!-- <span class="bold-me">valuable analytics</span> and <span class="bold-me">marketing tools</span> for your restaurant, at <span class="bold-me">no additional cost</span>. --></h3>
 					<ul class="value-prop">
-						<li><img src="images/arrow.png"><br>Lift revenue with repeat visits from valuable, loyal customers.</li>
-						<li><img src="images/people.png"><br>Lift revenue with repeat visits from valuable, loyal customers.</li>
-						<li><img src="images/dollar.png"><br>Lift revenue with repeat visits from valuable, loyal customers.</li>
+						<li><img src="images/logo2.png"><br>Let Swipely handle your restaurant's credit card processing.</li>
+						<li><img src="images/dollar.png"><br>No costly upgrades needed to point-of-sale equipment or software.</li>
+						<li><img src="images/arrow.png"><br>Lift revenue with repeat visits from valuable, loyal guests.</li>
 					</ul>
 					<a class="call-to-action" href="lead-capture-form.html">Get Started With Swipely</a>
 				</div>
@@ -68,9 +68,9 @@
 			</div>
 
 			<div class="feature-content">
-				<h3 class="blue-me" id="analytics-content">Analytics ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </h3>
-				<h3 class="blue-me" id="loyalty-content" style="display:none">Loyalty ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </h3>
-				<h3 class="blue-me" id="marketing-content" style="display:none">Marketing ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </h3>
+				<h3 class="blue-me" id="analytics-content">Our customer analytics allow you to monitor weekly sales and see who your best guests are, when they come in, and how much they spend.</h3>
+				<h3 class="blue-me" id="loyalty-content" style="display:none">Our loyalty program allows you to understand more about your guests and track the success of your rewards program.</h3>
+				<h3 class="blue-me" id="marketing-content" style="display:none">Our marketing tools help you promote your business by turning guests into loyalty members and bringing them back.</h3>
 			</div>
 
 		</div>
@@ -91,12 +91,12 @@
 				<div id="source"><img src="images/user-icon.jpg"><p>-</p><p>Jon, owner of <br> <a href="http://steaksbyjon.com">Jon's Steakhouse</a></p></div>
 				</div>
 				<div id="fast-casual-quote" style="display:none;">
-				<h1 id="quote">Swipely is a payment processor that's actually on my side.</h1>
-				<div id="source"><img src="images/user-icon.jpg"><p>-</p><p>Jon, owner of <br> <a href="http://steaksbyjon.com">Jon's Steakhouse2</a></p></div>
+				<h1 id="quote">Swipely gave my burrito joint the same marketing power Chipotle has.</h1>
+				<div id="source"><img src="images/user-icon.jpg"><p>-</p><p>Jeremy, manager of <br> <a href="http://steaksbyjon.com">Jeremy's Taqueria</a></p></div>
 				</div>
 				<div id="casual-dining-quote" style="display:none;">
-				<h1 id="quote">Swipely is a payment processor that's actually on my side.</h1>
-				<div id="source"><img src="images/user-icon.jpg"><p>-</p><p>Jon, owner of <br> <a href="http://steaksbyjon.com">Jon's Steakhouse</a></p></div>
+				<h1 id="quote">Swipely made my customer's habits abundantly clear to me..</h1>
+				<div id="source"><img src="images/user-icon.jpg"><p>-</p><p>Wes, owner of <br> <a href="http://steaksbyjon.com">Seventh Heaven</a></p></div>
 				</div>
 			</div>
 			<div class="swipely-works">
