--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+
+<!-- VIEW THE LATEST VERSION OF THIS LANDING PAGE ON GITHUB.COM/FLAHERTYB -->
+
 <head>
 
 	<meta charset="utf-8">
@@ -12,12 +15,12 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-	<link rel="stylesheet/less" type="text/css" href="stylesheets/elements.less">
-	<link rel="stylesheet/less" type="text/css" href="stylesheets/base.less">
-	<link rel="stylesheet/less" type="text/css" href="stylesheets/skeleton.less">
-	<link rel="stylesheet/less" type="text/css" href="stylesheets/layout.less">
-	<link rel="stylesheet/less" type="text/css" href="stylesheets/style.less">	
-	<script src="js/less.js" type="text/javascript"></script>
+	<link rel="stylesheet" type="text/css" href="stylesheets/skeleton.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/layout.css">	
+	<link rel="stylesheet" type="text/css" href="stylesheets/elements.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/base.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">	
+	<!--<script src="js/less.js" type="text/javascript"></script>-->
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
