added copy, a couple style edits

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 					<a class="call-to-action" href="lead-capture-form.html">Get Started With Swipely</a>
 				</div>
 
+<!--
 				<div class="banner-cycle">
 					<ul>
 						<li>Fast Casual</li>
@@ -69,6 +70,7 @@
 						<li>Fine Dining</li>
 					</ul>
 				</div>
+-->
 			</div>
 		</div>
 	</div>
@@ -103,22 +105,22 @@
 		
 		<div class="testimonial-container" style="background-color:transparent;">
 			<a name="testimonials"></a>
-			<h1 class="bold-me" style="color:white;">Testimonials</h1>
+	<!--		<h1 class="bold-me" style="color:white;">Testimonials</h1> -->
 		</div>
 
 		<div class="testimonial-container">
 			<div class="testimonial">
 				<div id="fine-dining-quote">
-				<h1 id="quote">Swipely is a payment processor that's actually on my side.</h1>
-				<div id="source"><img src="images/user-icon.jpg"><p>-</p><p>Jon, owner of <br> <a href="http://steaksbyjon.com">Jon's Steakhouse</a></p></div>
+				<h1 id="quote">It's amazing how much we have learned about our guest demographics. And it doesn't cost any more money than we pay already for processing.</h1>
+				<div id="source"><img src="images/user-icon.jpg"><p>-</p><p>RJ Cooper<br> <a href="http://steaksbyjon.com">Chef, Rogue 24</a></p></div>
 				</div>
 				<div id="fast-casual-quote" style="display:none;">
-				<h1 id="quote">Swipely gave my burrito joint the same marketing power Chipotle has.</h1>
-				<div id="source"><img src="images/user-icon.jpg"><p>-</p><p>Jeremy, manager of <br> <a href="http://steaksbyjon.com">Jeremy's Taqueria</a></p></div>
+				<h1 id="quote">I pay one low monthly fee to accept credit cards and and launch trackable marketing programs. It's a huge relief to have such a transparent partner on my side.</h1>
+				<div id="source"><img src="images/user-icon.jpg"><p>-</p><p>Chad Burns, Owner<br> <a href="http://steaksbyjon.com">Farmstead Tabel</a></p></div>
 				</div>
 				<div id="casual-dining-quote" style="display:none;">
-				<h1 id="quote">Swipely made my customer's habits abundantly clear to me..</h1>
-				<div id="source"><img src="images/user-icon.jpg"><p>-</p><p>Wes, owner of <br> <a href="http://steaksbyjon.com">Seventh Heaven</a></p></div>
+				<h1 id="quote">They have been exceptional and I would highly recommend them. Always very attentive to my needs and immediately answer any questions I have.</h1>
+				<div id="source"><img src="images/user-icon.jpg"><p>-</p><p>Lee Hartshorn<br> <a href="http://steaksbyjon.com">Owner, Metro Mutts</a></p></div>
 				</div>
 			</div>
 			<div class="swipely-works">
@@ -128,9 +130,9 @@
 					<li><img src="images/casual-dining.jpeg"><br>Casual Dining</li>
 				</ul>
 				<div style="clear:both;"></div>
-				<h3 id="fine-dining-content">first</h3>
-				<h3 id="fast-casual-content" style="display:none;">second</h3>
-				<h3 id="casual-dining-content" style="display:none;">third</h3>
+				<h3 id="fine-dining-content">Your guests love your dishes and service. Reward them for their support.</h3>
+				<h3 id="fast-casual-content" style="display:none;">You’re serving quality food at high volume. Identify customer trends and increase retention.</h3>
+				<h3 id="casual-dining-content" style="display:none;">Families love your restaurants. Incentivize them to keep coming back.</h3>
 			</div>
 			<a class="call-to-action" href="lead-capture-form.html">Get Started With Swipely</a>
 		</div>
